--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
-<!-- 
-your html source should go here 
-delete this comment, create a valid html page from scratch
-and link to the css/normalize.css and css/main.css in the <head> section 
--->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Dawg Pizza</title>
+		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="icon" href="img/pizza-icon.png">
+	</head>
+	<body>
+		<main>
+			<header>
+				<h1>Dawg Pizza</h1>
+				<p>Feeding Hungry Huskies Since 2013</p>
+			</header>
+			<section>
+				<h2>Address</h2>
+				<p><a href="https://goo.gl/maps/CKrRF">4529 University Way NE <br />Seattle, WA 98105</a></p>
+				<h2>Hours</h2>
+				<p>Open daily from noon to midnight</p>
+				<h2>To Order</h2>
+				<p>Call us at <a href="tel:206-555-1212"></a></p>
+			</section>
+		</main>
+	</body>
+</html>
